[gd_scene load_steps=7 format=1]

[ext_resource path="res://battle/UI/WeaponWidget.gd" type="Script" id=1]
[ext_resource path="res://battle/UI/WeaponButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/ubuntuMono_11.fnt" type="BitmapFont" id=3]
[ext_resource path="res://fonts/UbuntuC_13.fnt" type="BitmapFont" id=4]
[ext_resource path="res://battle/UI/Bar.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/gothic_15.fnt" type="BitmapFont" id=6]

[node name="WeaponWidget" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 10.0
margin/bottom = 10.0
script/script = ExtResource( 1 )

[node name="WeaponButton0" parent="." instance=ExtResource( 2 )]

margin/left = 10.0
margin/top = 37.0
margin/right = 210.0
margin/bottom = 100.0

[node name="WeaponButton1" parent="." instance=ExtResource( 2 )]

margin/left = 10.0
margin/top = 100.0
margin/right = 210.0
margin/bottom = 163.0

[node name="Durability" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 16.0
margin/right = 60.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 3 )
text = "Durability"
align = 3
valign = 3
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="Durability"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 140.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 12.0
custom_fonts/font = ExtResource( 4 )
text = "9999/9999"
align = 2
valign = 3
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Bar" parent="Durability" instance=ExtResource( 5 )]

visibility/behind_parent = true
margin/top = 3.0
margin/right = 200.0
margin/bottom = 10.0
color = Color( 1, 0.64682, 0.363281, 1 )

[node name="Ammo" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 26.0
margin/right = 60.0
margin/bottom = 36.0
custom_fonts/font = ExtResource( 3 )
text = "Ammo"
align = 3
valign = 3
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="Ammo"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 140.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 12.0
custom_fonts/font = ExtResource( 4 )
text = "9999/9999"
align = 2
valign = 3
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Bar" parent="Ammo" instance=ExtResource( 5 )]

visibility/behind_parent = true
margin/top = 3.0
margin/right = 200.0
margin/bottom = 10.0
color = Color( 0, 0.015625, 1, 1 )

[node name="WeaponName" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 0.0
margin/right = 210.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 6 )
text = "Weapon Name"
valign = 3
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


